fix: line new arrival overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -378,9 +378,12 @@ section.arrival h1 {
   display: flex;
   flex-direction: row;
   gap: 20px;
+  width: 100%;
+  justify-content: center;
 }
 .line-arrival {
-  width: 13.5rem;
+  width: 100%;
+  max-width: 13.5rem;
   height: 2px;
   background-color: var(--color-primary);
   margin: 13px 0 7px 0;
